--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,19 @@
 
 /* General */
 
+body{
+    background-color: var(--primary-color);
+}
+
 h1, h2, h3{
     font-family: var(--secondary-font);
-    color: black;
+    color: var(--highlight-color);
+    font-weight: bold;
+}
+
+p{
+    font-family: var(--primary-font);
+    color:var(--highlight-color)
 }
 
 /* Header */
@@ -27,5 +37,5 @@ h1, h2, h3{
 
 .header-title{
     border: 2px solid black;
-    background-color: rgba(255,255,255,0.5);
+    /* background-color: rgba(255,255,255,0.5); */
 }
