--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,8 @@
 /* General */
 
 body{
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
+    padding-top: 19px;
 }
 
 h1, h2, h3{
@@ -30,7 +31,7 @@ p{
 /* Header */
 
 #header{
-    background-color: var(--primary-color);
+    /* background-color: var(--primary-color); */
     width:100%;
     padding-top: 50px;
 }
@@ -38,4 +39,10 @@ p{
 .header-title{
     border: 2px solid black;
     /* background-color: rgba(255,255,255,0.5); */
+}
+
+/* Information section */
+
+#information .card p{
+    text-align: left;
 }
