styled navbar to match color scheme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,11 @@ p{
     font-weight:bolder;
 }
 
+/* Navbar */
+#navbar{
+    background-color: var(--secondary-color);
+}
+
 /* Header */
 
 #header{
