--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,10 @@ p{
     color:var(--highlight-color)
 }
 
+.section{
+    padding-top: 4rem;
+}
+
 .card{
     background-color:var(--secondary-color) ;
 }
