--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,10 @@ footer{
 
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width:768px){
+    header .header-title{
+        left:0px;
+    }
+
     #list #links{
         width:50%;
     }
