--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,14 +54,22 @@ p{
 /* Header */
 
 #header{
-    /* background-color: var(--primary-color); */
+    background:url(../images/header-image2.jpg) no-repeat 0% 25% / cover;
+    background-color: var(--primary-color);
     width:100%;
-    padding-top: 50px;
+    height:350px;
 }
 
 .header-title{
-    border: 2px solid black;
-    /* background-color: rgba(255,255,255,0.5); */
+    /* border: 2px solid black; */
+    background-color: rgba(255,255,255,0.8);
+    color:var(--primary-color);
+}
+
+header p{
+    background: rgba(255,255,255,0.25);
+    padding-top: 15px;
+    color:var(--primary-color);
 }
 
 /* Information section */
