--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body{
 h1, h2, h3{
     font-family: var(--secondary-font);
     color: var(--highlight-color-light);
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 p{
@@ -51,13 +51,17 @@ p{
     background-color: var(--secondary-color);
 }
 
+#navbar i{
+    font-size:larger;
+}
+
 /* Header */
 
 #header{
-    background:url(../images/header-image2.jpg) no-repeat 0% 25% / cover;
+    background:url(../images/header-image2.jpg) no-repeat 50% 25% / cover;
     background-color: var(--primary-color);
     width:100%;
-    height:350px;
+    min-height:350px;
 }
 
 .header-title{
