--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,6 @@ p{
     background:url(../images/header-image2.jpg) no-repeat 50% 35% / cover;
     background-color: var(--primary-color);
     /* width:100%; */
-    min-height:350px;
 }
 
 .header-title{
@@ -124,10 +123,29 @@ footer{
 }
 
 
-/* Media query: tablets and larger (768px and up)
-@media screen and (min-width:768px){
+/* Media query: large screens and up (992px and up) */
+@media screen and (min-width:992px){
 
-    #list #links{
-        width:50%;
+    #header{
+        min-height:325px;
     }
-} */
+
+}
+
+/* Media query: extra-large screens and up (1200px and up) */
+@media screen and (min-width:1200px){
+
+    #header{
+        min-height:375px;
+    }
+
+}
+
+/* Media query: extra-large screens and up (1400px and up) */
+@media screen and (min-width:1400px){
+
+    #header{
+        min-height:60vh;
+    }
+
+}
