--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ p{
 /* Header */
 
 #header{
-    background:url(../images/header-image.jpg) no-repeat 50% 35% / cover;
+    background:url(../images/header-image.webp) no-repeat 50% 35% / cover;
     background-color: var(--primary-color);
     /* width:100%; */
 }
@@ -146,7 +146,7 @@ footer{
     header p{
         font-size:x-large
     }
-    
+
 }
 
 /* Media query: extra-large screens and up (1400px and up) */
